--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,5 @@
 [core]
-    remote = mylocal
     autostage = true
-['remote "mylocal"']
-    url = ../local_s3
+    remote = myremote
+['remote "myremote"']
+    url = s3://ete-1
