--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -5,7 +5,7 @@ nltk==3.9.1
 numpy==2.2.1
 pandas==2.2.3
 prometheus_client
-dotenv==1.0.0
+dotenv
 requests==2.31.0
 fastapi==0.103.1
 uvicorn==0.23.2
