--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -6,7 +6,7 @@ numpy==2.2.1
 pandas==2.2.3
 prometheus_client
 dotenv
-requests==2.31.0
+requests
 fastapi==0.103.1
 uvicorn==0.23.2
 pydantic==1.10.12
