--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -1,14 +1,24 @@
-dagshub==0.4.2
-mlflow==2.19.0
-mlflow_skinny==2.19.0
-nltk==3.9.1
-numpy==2.2.1
-pandas==2.2.3
+dagshub
+mlflow
+mlflow_skinny
+nltk
+numpy
+pandas
 prometheus_client
 dotenv
 requests
-fastapi==0.103.1
-uvicorn==0.23.2
-pydantic==1.10.12
-fastapi==0.103.1
+fastapi
+uvicorn
+pydantic
+fastapi
+botocore
+yaml
+dotenv
+boto3
+onnx
+onnxruntime
+pickle
+
+sk-learn
+
 
