--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -1,23 +1,14 @@
-dagshub
-mlflow
-mlflow_skinny
-nltk
 numpy
 pandas
-prometheus_client
-dotenv
+scikit-learn
+matplotlib
+seaborn
+torch
+torchvision
+torchaudio
+tensorflow
 requests
+flask
 fastapi
 uvicorn
-pydantic
-fastapi
-botocore
-dotenv
-boto3
-onnx
-onnxruntime
-pickle
-
-sk-learn
-
-
+streamlit
