--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,10 +36,9 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-
-
-      - name: run pipeline
+      - name: Run pipeline
         env:
           CAPSTONE_TEST: ${{ secrets.DAGSHUB_ACCESS_TOKEN }}
         run: |
