--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,23 +1,20 @@
 name: CI Pipeline
-
 on: push
-
 jobs:
   project-testing:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
+      
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
+      
       - name: Show Pip Cache Path
         run: pip cache dir
-
+      
       - name: Cache pip dependencies
         uses: actions/cache@v3
         with:
@@ -26,20 +23,24 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
             ${{ runner.os }}-
-
+      
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-
+      
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-
+      
       - name: Run pipeline
         env:
-          CAPSTONE_TEST: ${{ secrets.DAGSHUB_ACCESS_TOKEN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          DAGSHUB_ACCESS_TOKEN: ${{ secrets.DAGSHUB_ACCESS_TOKEN }}
         run: |
+          aws s3 ls 
           dvc repro
