--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
-﻿numpy
-pandas
-scikit-learn
-matplotlib
-seaborn
-torch
-
-requests
-flask
-fastapi
-uvicorn
-streamlit
-dotenv
-dagshub
-mlflow
-dvc
-dvc[s3]
+boto3==1.34.154
+boto3==1.37.13
+dagshub==0.5.9
+fastapi==0.115.12
+mlflow==2.21.2
+mlflow_skinny==2.21.2
+nltk==3.9.1
+numpy==2.2.4
+onnx==1.17.0
+onnxruntime==1.21.0
+pandas==2.2.3
+prometheus_client==0.21.1
+python-dotenv==1.1.0
+PyYAML==6.0.2
+PyYAML==6.0.2
+scikit_learn==1.6.1
+setuptools==76.0.0
+skl2onnx==1.16.0
+uvicorn==0.34.0
