--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-boto3==1.34.154
-boto3==1.37.13
+﻿boto3==1.37.13
 dagshub==0.5.9
 fastapi==0.115.12
 mlflow==2.21.2
@@ -11,7 +10,6 @@ onnxruntime==1.21.0
 pandas==2.2.3
 prometheus_client==0.21.1
 python-dotenv==1.1.0
-PyYAML==6.0.2
 PyYAML==6.0.2
 scikit_learn==1.6.1
 setuptools==76.0.0
