--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-﻿boto3
-dagshub
-fastapi
-mlflow
-mlflow_skinny
-nltk
-numpy
-onnx
-onnxruntime
-pandas
-prometheus_client
-python-dotenv
-PyYAML
-scikit_learn
-setuptools
-skl2onnx
-uvicorn
-dvc[s3]
+# Core Dependencies (Strictly Pinned)
+boto3==1.26.118  # Last known stable version before aiobotocore conflicts
+aiobotocore==2.4.2  # Explicit old version that works with boto3
+dvc[s3]==2.18.1  # Older but stable DVC version (avoiding newer conflicts)
+
+# ML Stack (Locked Versions)
+mlflow==1.30.0  # MLflow 1.x avoids newer dependency headaches
+scikit-learn==1.0.2  # Very stable sklearn version
+numpy==1.21.6  # Old but universally compatible
+pandas==1.3.5  # Works with numpy 1.21
+
+# API & Utilities
+fastapi==0.68.1  # Stable older FastAPI
+uvicorn==0.15.0  # Compatible with FastAPI 0.68
+python-dotenv==0.19.0  # Basic and stable
+PyYAML==5.4.1  # No breaking changesJ
+
+# Monitoring
+prometheus-client==0.16.0  # For metrics collection
+grafana-api-client==1.0.3  # For Grafana integration
